apps/cobalt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cobalt
  labels:
    name: cobalt
