apps/cobalt/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt-api
  namespace: cobalt
  labels:
    app: cobalt-api
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "cobalt-api.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9000
      protocol: TCP
  selector:
    app: cobalt-api
