apps/cobalt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt
  namespace: cobalt
  labels:
    app: cobalt
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "cobalt.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: cobalt
